--- a/templates/public/library.html
+++ b/templates/public/library.html
@@ -5,5 +5,16 @@
 {% endblock %}
 
 {% block main %}
-    
-{% endblock %}
+    <div class="container-sm py-5">
+        
+        <div class="text-center text-md-start">
+            <p class="fs-3 ms-0 ms-md-5 d-inline-block border-bottom border-2 mb-0" style="border-color: #3F51B5 !important;">Library</p>
+        </div>        
+
+        <hr class="mt-0 mb-3">
+        
+        <!-- contents -->
+         
+        
+    </div>  
+{% endblock %}zz
