--- a/templates/admin/genres/list.html
+++ b/templates/admin/genres/list.html
@@ -57,7 +57,7 @@
     </div>
     
     <!-- contents -->
-    <div class="container-sm py-5 px-4">
+    <div class="container-sm py-5">
         <!-- header -->
         <div class="d-flex justify-content-between align-items-center text-center">
             <p class="fs-3 ms-0 ms-md-5 d-inline-block border-bottom border-2 mb-0" style="border-color: #3F51B5 !important;">Manage Genres</p>
@@ -70,26 +70,28 @@
 
         <form method="get" action="{{ url_for('admin.view_genres') }}">
             <div class="row mb-3">
-                <div class="bg-body rounded shadow p-3">
-                    <div class="d-flex flex-column flex-md-row justify-content-between gap-2">
-                        
-                        <div class="w-100" style="max-width: 200px;">
-                            <label for="perPageSelect" class="form-label">Items per page</label>
-                            <select class="form-select" aria-label="perPageSelect" id="perPageSelect" name="per_page" onchange="this.form.submit()">
-                                <option value="5" {% if request.args.get('per_page') == '5' %}selected{% endif %}>Show 5</option>
-                                <option value="10" {% if request.args.get('per_page') == '10' or not request.args.get('per_page') %}selected{% endif %}>Show 10</option>
-                                <option value="25" {% if request.args.get('per_page') == '25' %}selected{% endif %}>Show 25</option>
-                                <option value="50" {% if request.args.get('per_page') == '50' %}selected{% endif %}>Show 50</option>
-                            </select>
-                        </div>
+                <div class="col-12">
+                    <div class="bg-body rounded shadow p-3">
+                        <div class="d-flex flex-column flex-md-row justify-content-between gap-2">
+                            
+                            <div class="w-100" style="max-width: 200px;">
+                                <label for="perPageSelect" class="form-label">Items per page</label>
+                                <select class="form-select" aria-label="perPageSelect" id="perPageSelect" name="per_page" onchange="this.form.submit()">
+                                    <option value="5" {% if request.args.get('per_page') == '5' %}selected{% endif %}>Show 5</option>
+                                    <option value="10" {% if request.args.get('per_page') == '10' or not request.args.get('per_page') %}selected{% endif %}>Show 10</option>
+                                    <option value="25" {% if request.args.get('per_page') == '25' %}selected{% endif %}>Show 25</option>
+                                    <option value="50" {% if request.args.get('per_page') == '50' %}selected{% endif %}>Show 50</option>
+                                </select>
+                            </div>
 
-                        <div class="w-100" style="max-width: 250px;">
-                            <label for="searchInput" class="form-label">Search Genres</label>
-                            <div class="input-group">
-                                <span class="input-group-text" id="search-genre"><i class="bi bi-search"></i></span>
-                                <input type="text" class="form-control" placeholder="Search..." id="searchInput" name="search"
-                                value="{{ request.args.get('search', '') }}"
-                                onkeydown="if(event.key === 'Enter') this.form.submit();">
+                            <div class="w-100" style="max-width: 250px;">
+                                <label for="searchInput" class="form-label">Search Genres</label>
+                                <div class="input-group">
+                                    <span class="input-group-text" id="search-genre"><i class="bi bi-search"></i></span>
+                                    <input type="text" class="form-control" placeholder="Search..." id="searchInput" name="search"
+                                    value="{{ request.args.get('search', '') }}"
+                                    onkeydown="if(event.key === 'Enter') this.form.submit();">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -98,98 +100,102 @@
         </form>
     
         <div class="row mb-3">
-            <div class="bg-body rounded shadow p-3">
-                
-                <div class="col-12 px-3">
-                    <div class="table-responsive">
-                        <table class="table table-hover">
+            <div class="col-12">
+                <div class="bg-body rounded shadow p-3">
+                    
+                    <div class="col-12 px-3">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
 
-                            <thead>
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for genre in genres %}
+                                <thead>
                                     <tr>
-                                        <th scope="col">{{ genre['id'] }}</th>
-                                        <td>{{ genre['name'] }}</td>
-                                        <td class="text-nowrap">
-                                            <div class="d-flex align-items-center gap-2">
-                                                <button class="btn btn-outline-primary border-0" data-bs-toggle="modal" data-bs-target="#editGenre" data-id="{{ genre.id }}" data-name="{{ genre.name }}">
-                                                    <i class="bi bi-pencil" data-bs-toggle="tooltip" data-bs-title="Edit genre"></i>
-                                                </button>
-                                            </div>                      
-                                        </td>
-                                    </tr>                           
-                                {% endfor %}
-                            </tbody>
-
-                        </table>
-                    </div>                  
-                </div>
-
-                <div class="row">
-                    <div class="col-12">
-                        <div class="d-flex flex-column flex-md-row text-center justify-content-between align-items-center px-3">
-                            <p class="text-muted">
-                                Showing 
-                                {{ (pagination.page - 1) * pagination.per_page + 1}} -
-                                {{ pagination.page * pagination.per_page if pagination.page * pagination.per_page < pagination.total else pagination.total }}
-                                of {{ pagination.total }} genres
-                            </p>
-                            
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination pagination-sm flex-wrap">
-
-                                    <!-- First page -->
-                                    <li class="page-item {% if not pagination.has_prev %}disabled{% endif %}">
-                                    <a class="page-link" href="{{ url_for('admin.view_genres', page=1, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="First">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                    </li>
-
-                                    <!-- Previous page -->
-                                    <li class="page-item {% if not pagination.has_prev %}disabled{% endif %}">
-                                    <a class="page-link" href="{{ url_for('admin.view_genres', page=pagination.prev_num, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="Previous">
-                                        <span aria-hidden="true">&lsaquo;</span>
-                                    </a>
-                                    </li>
-
-                                    <!-- Page numbers -->
-                                    {% for page_num in pagination.iter_pages(left_edge=1, right_edge=1, left_current=2, right_current=2) %}
-                                        {% if page_num %}
-                                            <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
-                                                <a class="page-link" href="{{ url_for('admin.view_genres', page=page_num, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}">{{ page_num }}</a>
-                                            </li>
-                                        {% else %}
-                                            <li class="page-item disabled"><a class="page-link">…</a></li>
-                                        {% endif %}
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for genre in genres %}
+                                        <tr>
+                                            <th scope="col">{{ genre['id'] }}</th>
+                                            <td>{{ genre['name'] }}</td>
+                                            <td>
+                                                <div class="d-flex">
+                                                    <div class="align-items-center ms-auto gap-2">
+                                                        <button class="btn btn-outline-primary border-0" data-bs-toggle="modal" data-bs-target="#editGenre" data-id="{{ genre.id }}" data-name="{{ genre.name }}">
+                                                            <i class="bi bi-pencil" data-bs-toggle="tooltip" data-bs-title="Edit genre"></i>
+                                                        </button>
+                                                    </div>                                           
+                                                </div>                      
+                                            </td>
+                                        </tr>                           
                                     {% endfor %}
+                                </tbody>
 
-                                    <!-- Next page -->
-                                    <li class="page-item {% if not pagination.has_next %}disabled{% endif %}">
-                                    <a class="page-link" href="{{ url_for('admin.view_genres', page=pagination.next_num, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="Next">
-                                        <span aria-hidden="true">&rsaquo;</span>
-                                    </a>
-                                    </li>
+                            </table>
+                        </div>                  
+                    </div>
 
-                                    <!-- Last page -->
-                                    <li class="page-item {% if not pagination.has_next %}disabled{% endif %}">
-                                    <a class="page-link" href="{{ url_for('admin.view_genres', page=pagination.pages, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="Last">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                    </li>
-                                </ul>
-                            </nav>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="d-flex flex-column flex-md-row text-center justify-content-between align-items-center px-3">
+                                <p class="text-muted">
+                                    Showing 
+                                    {{ (pagination.page - 1) * pagination.per_page + 1}} -
+                                    {{ pagination.page * pagination.per_page if pagination.page * pagination.per_page < pagination.total else pagination.total }}
+                                    of {{ pagination.total }} genres
+                                </p>
+                                
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination pagination-sm flex-wrap">
+
+                                        <!-- First page -->
+                                        <li class="page-item {% if not pagination.has_prev %}disabled{% endif %}">
+                                        <a class="page-link" href="{{ url_for('admin.view_genres', page=1, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="First">
+                                            <span aria-hidden="true">&laquo;</span>
+                                        </a>
+                                        </li>
+
+                                        <!-- Previous page -->
+                                        <li class="page-item {% if not pagination.has_prev %}disabled{% endif %}">
+                                        <a class="page-link" href="{{ url_for('admin.view_genres', page=pagination.prev_num, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="Previous">
+                                            <span aria-hidden="true">&lsaquo;</span>
+                                        </a>
+                                        </li>
+
+                                        <!-- Page numbers -->
+                                        {% for page_num in pagination.iter_pages(left_edge=1, right_edge=1, left_current=2, right_current=2) %}
+                                            {% if page_num %}
+                                                <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
+                                                    <a class="page-link" href="{{ url_for('admin.view_genres', page=page_num, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}">{{ page_num }}</a>
+                                                </li>
+                                            {% else %}
+                                                <li class="page-item disabled"><a class="page-link">…</a></li>
+                                            {% endif %}
+                                        {% endfor %}
+
+                                        <!-- Next page -->
+                                        <li class="page-item {% if not pagination.has_next %}disabled{% endif %}">
+                                        <a class="page-link" href="{{ url_for('admin.view_genres', page=pagination.next_num, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="Next">
+                                            <span aria-hidden="true">&rsaquo;</span>
+                                        </a>
+                                        </li>
+
+                                        <!-- Last page -->
+                                        <li class="page-item {% if not pagination.has_next %}disabled{% endif %}">
+                                        <a class="page-link" href="{{ url_for('admin.view_genres', page=pagination.pages, per_page=request.args.get('per_page', '10'), search=request.args.get('search', '')) }}" aria-label="Last">
+                                            <span aria-hidden="true">&raquo;</span>
+                                        </a>
+                                        </li>
+                                    </ul>
+                                </nav>
+
+                            </div>
 
                         </div>
-
                     </div>
+                    
                 </div>
-                
             </div>
         </div>
     </div>
