--- a/templates/public/library.html
+++ b/templates/public/library.html
@@ -14,7 +14,55 @@
         <hr class="mt-0 mb-3">
         
         <!-- contents -->
-         
+        {% for novel in novels %}
+            <div class="col-12 border-bottom py-4">
+                <div class="row g-3" style="min-height: 190px;">
+                    <div class="col-4 col-sm-3 col-md-2 d-flex align-items-center">
+                        <div class="w-100 position-relative" style="aspect-ratio: 2 / 3;">
+
+                            <a href="{{ url_for('view_novel', novel_id=novel.id) }}" class="text-decoration-none">
+                                <img src="{{ url_for('static', filename=novel.cover_image) if novel.cover_image else url_for('static', filename='uploads/placeholder.png')}}" class="rounded img-fluid object-fit-cover w-100 h-100" alt="...">
+                            </a>
+
+                            <div class="position-absolute start-0 end-0 bottom-0 p-2" style="background: rgba(0,0,0,0.3);">
+                                <button class="btn btn-sm btn-danger text-truncate w-100 removeFromLibraryBtn" data-novel-id="{{ novel.id }}">
+                                    <i class="bi bi-x"></i> Remove
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="ms-0 ms-sm-2 ms-md-3 ms-lg-5">
+
+                            <h5 class="fw-semibold mb-3 text-truncate">
+                                <a href="{{ url_for('view_novel', novel_id=novel.id) }}" class="text-decoration-none text-body">{{ novel.title }}</a>                              
+                            </h5>
+
+                            <p class="text-muted small mb-3 clamp">{{ novel.description }}</p>
+
+                            <div class="mb-3">
+                                <i class="bi bi-file-earmark-text"></i> {{ novel.chapters|length }}
+                            </div>
+
+                            <p class="card-text text-truncate small text-secondary mb-3">
+                                {% for genre in novel.genres %}
+                                    {{ genre.name }}{% if not loop.last %} · {% endif %}
+                                {% endfor %}
+                            </p>
+
+                            {% if novel.status %}
+                                <span class="badge bg-secondary">{{ novel.status }}</span>
+                            {% endif %}
+                        </div>
+                        
+                    </div>
+                </div>        
+            </div>
+        {% endfor %}
         
     </div>  
-{% endblock %}zz
+{% endblock %}
+
+{% block script %}
+    <script src="{{ url_for('static', filename='userLibrary.js') }}"></script>
+{% endblock %}
