--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -57,11 +57,6 @@
                                             </div>
                                             <hr class="my-2">
                                             <li>
-                                                <a class="btn btn-outline-primary w-100 my-1" href="/settings">
-                                                    <i class="bi bi-gear-fill"></i> Settings
-                                                </a>
-                                            </li>
-                                            <li>
                                                 <a class="btn btn-outline-danger w-100 my-1" href="{{ url_for('logout', next=request.path) }}">
                                                     <i class="bi bi-box-arrow-right"></i> Log Out
                                                 </a>
@@ -89,13 +84,13 @@
                     <div class="collapse navbar-collapse ms-lg-3" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link {% if request.path == '/' %}active{% endif %}" {% if request.path == '/' %}aria-current="page"{% endif %} href="/" >home</a>
+                                <a class="nav-link {% if request.path == '/' %}active{% endif %}" {% if request.path == '/' %}aria-current="page"{% endif %} href="/" >Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {% if request.path.startswith('/novels') %}active{% endif %}" {% if request.path.startswith('/novels') %}aria-current="page"{% endif %} href="/novels">novels</a>
+                                <a class="nav-link {% if request.path.startswith('/novels') %}active{% endif %}" {% if request.path.startswith('/novels') %}aria-current="page"{% endif %} href="/novels">Novels</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {% if request.path.startswith('/library') %}active{% endif %}" {% if request.path.startswith('/library') %}aria-current="page"{% endif %} href="/library">library</a>
+                                <a class="nav-link {% if request.path.startswith('/library') %}active{% endif %}" {% if request.path.startswith('/library') %}aria-current="page"{% endif %} href="/library">Library</a>
                             </li>
                         </ul>
                     </div>
