bug fix: sanitize title to upload to cloudinary

--- a/templates/public/read_chapter.html
+++ b/templates/public/read_chapter.html
@@ -14,7 +14,7 @@
     <body id="reader-body" class="d-flex flex-column min-vh-100 sora">
         
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" style="z-index: 1100;">
-            <div class="position-relative border-bottom border-5" style="background-position: center; background-size: cover; height: 180px; background-image: url('{{ cover_url }}');">
+            <div class="position-relative border-bottom border-5" style="background-position: center; background-size: cover; min-height: 180px; max-height: 180px; background-image: url('{{ cover_url }}');">
 
                 <div class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(0, 0, 0, 0.5); z-index: 1;"></div>
                 
